Jenkins_Tools/vault/90-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vault
  namespace: vault

spec:
  serviceName: vault
  replicas: 1

  selector:
    matchLabels:
      app: vault

  template:
    metadata:
      labels:
        app: vault

    spec:
      serviceAccountName: vault

      containers:
      - name: vault
        image: hashicorp/vault:1.18.1

        args:
        - server
        - /vault/config/vault.hcl

        ports:
        - containerPort: 8200
          name: vault

        securityContext:
          capabilities:
            add:
            - IPC_LOCK

        volumeMounts:
        - name: config
          mountPath: /vault/config

        - name: vault-storage
          mountPath: /vault/file

      volumes:
      - name: config
        configMap:
          name: vault-config

  volumeClaimTemplates:
  - metadata:
      name: vault-storage

    spec:
      accessModes:
      - ReadWriteOnce

      storageClassName: gp3-storage

      resources:
        requests:
          storage: 10Gi
