Jenkins_Tools/vault/stateful_set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vault
  namespace: vault

spec:
  serviceName: vault
  replicas: 1

  selector:
    matchLabels:
      app: vault

  template:
    metadata:
      labels:
        app: vault

    spec:
      serviceAccountName: vault

      containers:
      - name: vault
        image: hashicorp/vault:latest

        args:
        - server
        - -dev

        ports:
        - containerPort: 8200
          name: vault

        volumeMounts:
        - name: vault-storage
          mountPath: /vault/file

  volumeClaimTemplates:
  - metadata:
      name: vault-storage

    spec:
      accessModes:
      - ReadWriteOnce

      storageClassName: gp3-storage

      resources:
        requests:
          storage: 10Gi
