Jenkins_Tools/vault/80-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
spec:
  type: ClusterIP
  selector:
    app: vault
  ports:
  - port: 8200
    targetPort: 8200
